--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -19,12 +19,13 @@ body[a="dark"] { @include dark-appearance; }
 // bg color is also needed in html in order to
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
+
 html, body { background: greenyellow; }
 
 html { height: 100%; }
 
 body {
-  color: greenyellow;
+  color: black;
   font-family: monospace;
   font-size: 16px;
   line-height: 1.4;
@@ -68,7 +69,7 @@ table, th, td {
 }
 
 code {
-  color: greenyellow;
+  color: black;
   background: black;
 }
 
