Updated font color

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,5 +1,5 @@
 // -------------- THEME SWITCHER -------------- //
-@mixin dark-appearance {
+@mixin light-appearance {
   filter: invert(1);
   img {
     filter: invert(1);
@@ -8,23 +8,23 @@
   }
 }
 
-body[a="dark"] { @include dark-appearance; }
+body[a="light"] { @include light-appearance; }
 
 
-@media (prefers-color-scheme: dark) {
-  body[a="auto"] { @include dark-appearance; }
+@media (prefers-color-scheme: light) {
+  body[a="light"] { @include light-appearance; }
 }
 // -------------------------------------------- //
 
 // bg color is also needed in html in order to
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
-html, body { background: white; }
+html, body { background: black; }
 
 html { height: 100%; }
 
 body {
-  color: black;
+  color: #0483f7;
   font-family: monospace;
   font-size: 16px;
   line-height: 1.4;
@@ -43,7 +43,15 @@ p { margin: 1rem 0; }
 
 li { margin: 0.4rem 0; }
 
-*:target { background: yellow; }
+*:target { background: green; }
+
+a:link{
+  color: rgb(135, 240, 135);
+}
+
+a:visited{
+  color: rgb(135, 240, 135);
+}
 
 .w {
   max-width: 640px;
@@ -62,26 +70,14 @@ hr {
 table { width: 100%; }
 
 table, th, td {
-  border: thin solid black;
+  border: thin solid white;
   border-collapse: collapse;
   padding: 0.4rem;
 }
 
-code {
-  color: white;
-  background: black;
-}
-
-div.highlighter-rouge code {
-  display: block;
-  overflow-x: auto;
-  white-space: pre-wrap;
-  padding: 1rem;
-}
-
 blockquote {
   font-style: italic;
-  border: thin solid black;
+  border: thin solid white;
   padding: 1rem;
 
   p { margin: 0; }
