--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -46,11 +46,11 @@ li { margin: 0.4rem 0; }
 *:target { background: green; }
 
 a:link{
-  color: rgb(135, 240, 135);
+  color: #5800c8;
 }
 
 a:visited{
-  color: rgb(135, 240, 135);
+  color: #5800c8;
 }
 
 .w {
